# core/src/main/java/com/radixdlt/api/core/generated/models/CommittedTransaction.java
@@ -1,0 +1,143 @@
+/*
+ * Babylon Core API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.radixdlt.api.core.generated.models;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.radixdlt.api.core.generated.models.NotarizedTransaction;
+import com.radixdlt.api.core.generated.models.TransactionReceipt;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * CommittedTransaction
+ */
+@JsonPropertyOrder({
+  CommittedTransaction.JSON_PROPERTY_NOTARIZED_TRANSACTION,
+  CommittedTransaction.JSON_PROPERTY_RECEIPT
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class CommittedTransaction {
+  public static final String JSON_PROPERTY_NOTARIZED_TRANSACTION = "notarized_transaction";
+  private NotarizedTransaction notarizedTransaction;
+
+  public static final String JSON_PROPERTY_RECEIPT = "receipt";
+  private TransactionReceipt receipt;
+
+
+  public CommittedTransaction notarizedTransaction(NotarizedTransaction notarizedTransaction) {
+    this.notarizedTransaction = notarizedTransaction;
+    return this;
+  }
+
+   /**
+   * Get notarizedTransaction
+   * @return notarizedTransaction
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_NOTARIZED_TRANSACTION)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public NotarizedTransaction getNotarizedTransaction() {
+    return notarizedTransaction;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_NOTARIZED_TRANSACTION)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setNotarizedTransaction(NotarizedTransaction notarizedTransaction) {
+    this.notarizedTransaction = notarizedTransaction;
+  }
+
+
+  public CommittedTransaction receipt(TransactionReceipt receipt) {
+    this.receipt = receipt;
+    return this;
+  }
+
+   /**
+   * Get receipt
+   * @return receipt
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_RECEIPT)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public TransactionReceipt getReceipt() {
+    return receipt;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_RECEIPT)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setReceipt(TransactionReceipt receipt) {
+    this.receipt = receipt;
+  }
+
+
+  /**
+   * Return true if this CommittedTransaction object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    CommittedTransaction committedTransaction = (CommittedTransaction) o;
+    return Objects.equals(this.notarizedTransaction, committedTransaction.notarizedTransaction) &&
+        Objects.equals(this.receipt, committedTransaction.receipt);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(notarizedTransaction, receipt);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class CommittedTransaction {\n");
+    sb.append("    notarizedTransaction: ").append(toIndentedString(notarizedTransaction)).append("\n");
+    sb.append("    receipt: ").append(toIndentedString(receipt)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
