# core/src/main/java/com/radixdlt/api/core/generated/models/CommittedTransactionsResponse.java
@@ -1,0 +1,149 @@
+/*
+ * Babylon Core API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.radixdlt.api.core.generated.models;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.radixdlt.api.core.generated.models.CommittedTransaction;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.util.ArrayList;
+import java.util.List;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * CommittedTransactionsResponse
+ */
+@JsonPropertyOrder({
+  CommittedTransactionsResponse.JSON_PROPERTY_STATE_VERSION,
+  CommittedTransactionsResponse.JSON_PROPERTY_TRANSACTIONS
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class CommittedTransactionsResponse {
+  public static final String JSON_PROPERTY_STATE_VERSION = "state_version";
+  private Long stateVersion;
+
+  public static final String JSON_PROPERTY_TRANSACTIONS = "transactions";
+  private List<CommittedTransaction> transactions = new ArrayList<>();
+
+
+  public CommittedTransactionsResponse stateVersion(Long stateVersion) {
+    this.stateVersion = stateVersion;
+    return this;
+  }
+
+   /**
+   * Get stateVersion
+   * @return stateVersion
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_STATE_VERSION)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public Long getStateVersion() {
+    return stateVersion;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_STATE_VERSION)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setStateVersion(Long stateVersion) {
+    this.stateVersion = stateVersion;
+  }
+
+
+  public CommittedTransactionsResponse transactions(List<CommittedTransaction> transactions) {
+    this.transactions = transactions;
+    return this;
+  }
+
+  public CommittedTransactionsResponse addTransactionsItem(CommittedTransaction transactionsItem) {
+    this.transactions.add(transactionsItem);
+    return this;
+  }
+
+   /**
+   * A committed transactions list starting from the &#x60;state_version&#x60;.
+   * @return transactions
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "A committed transactions list starting from the `state_version`.")
+  @JsonProperty(JSON_PROPERTY_TRANSACTIONS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public List<CommittedTransaction> getTransactions() {
+    return transactions;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_TRANSACTIONS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setTransactions(List<CommittedTransaction> transactions) {
+    this.transactions = transactions;
+  }
+
+
+  /**
+   * Return true if this CommittedTransactionsResponse object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    CommittedTransactionsResponse committedTransactionsResponse = (CommittedTransactionsResponse) o;
+    return Objects.equals(this.stateVersion, committedTransactionsResponse.stateVersion) &&
+        Objects.equals(this.transactions, committedTransactionsResponse.transactions);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(stateVersion, transactions);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class CommittedTransactionsResponse {\n");
+    sb.append("    stateVersion: ").append(toIndentedString(stateVersion)).append("\n");
+    sb.append("    transactions: ").append(toIndentedString(transactions)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
