# core/src/main/java/com/radixdlt/api/core/generated/models/IntentSignature.java
@@ -1,0 +1,141 @@
+/*
+ * Babylon Core API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.radixdlt.api.core.generated.models;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * IntentSignature
+ */
+@JsonPropertyOrder({
+  IntentSignature.JSON_PROPERTY_PUBLIC_KEY,
+  IntentSignature.JSON_PROPERTY_SIGNATURE
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class IntentSignature {
+  public static final String JSON_PROPERTY_PUBLIC_KEY = "public_key";
+  private String publicKey;
+
+  public static final String JSON_PROPERTY_SIGNATURE = "signature";
+  private String signature;
+
+
+  public IntentSignature publicKey(String publicKey) {
+    this.publicKey = publicKey;
+    return this;
+  }
+
+   /**
+   * Get publicKey
+   * @return publicKey
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_PUBLIC_KEY)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getPublicKey() {
+    return publicKey;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_PUBLIC_KEY)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setPublicKey(String publicKey) {
+    this.publicKey = publicKey;
+  }
+
+
+  public IntentSignature signature(String signature) {
+    this.signature = signature;
+    return this;
+  }
+
+   /**
+   * Get signature
+   * @return signature
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_SIGNATURE)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getSignature() {
+    return signature;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_SIGNATURE)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setSignature(String signature) {
+    this.signature = signature;
+  }
+
+
+  /**
+   * Return true if this IntentSignature object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    IntentSignature intentSignature = (IntentSignature) o;
+    return Objects.equals(this.publicKey, intentSignature.publicKey) &&
+        Objects.equals(this.signature, intentSignature.signature);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(publicKey, signature);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class IntentSignature {\n");
+    sb.append("    publicKey: ").append(toIndentedString(publicKey)).append("\n");
+    sb.append("    signature: ").append(toIndentedString(signature)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
