# core/src/main/java/com/radixdlt/api/core/generated/models/TransactionIntent.java
@@ -1,0 +1,174 @@
+/*
+ * Babylon Core API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.radixdlt.api.core.generated.models;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.radixdlt.api.core.generated.models.TransactionHeader;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * TransactionIntent
+ */
+@JsonPropertyOrder({
+  TransactionIntent.JSON_PROPERTY_HASH,
+  TransactionIntent.JSON_PROPERTY_HEADER,
+  TransactionIntent.JSON_PROPERTY_MANIFEST
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class TransactionIntent {
+  public static final String JSON_PROPERTY_HASH = "hash";
+  private String hash;
+
+  public static final String JSON_PROPERTY_HEADER = "header";
+  private TransactionHeader header;
+
+  public static final String JSON_PROPERTY_MANIFEST = "manifest";
+  private String manifest;
+
+
+  public TransactionIntent hash(String hash) {
+    this.hash = hash;
+    return this;
+  }
+
+   /**
+   * Get hash
+   * @return hash
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_HASH)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getHash() {
+    return hash;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_HASH)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setHash(String hash) {
+    this.hash = hash;
+  }
+
+
+  public TransactionIntent header(TransactionHeader header) {
+    this.header = header;
+    return this;
+  }
+
+   /**
+   * Get header
+   * @return header
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_HEADER)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public TransactionHeader getHeader() {
+    return header;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_HEADER)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setHeader(TransactionHeader header) {
+    this.header = header;
+  }
+
+
+  public TransactionIntent manifest(String manifest) {
+    this.manifest = manifest;
+    return this;
+  }
+
+   /**
+   * Get manifest
+   * @return manifest
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_MANIFEST)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public String getManifest() {
+    return manifest;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_MANIFEST)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setManifest(String manifest) {
+    this.manifest = manifest;
+  }
+
+
+  /**
+   * Return true if this TransactionIntent object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    TransactionIntent transactionIntent = (TransactionIntent) o;
+    return Objects.equals(this.hash, transactionIntent.hash) &&
+        Objects.equals(this.header, transactionIntent.header) &&
+        Objects.equals(this.manifest, transactionIntent.manifest);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(hash, header, manifest);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class TransactionIntent {\n");
+    sb.append("    hash: ").append(toIndentedString(hash)).append("\n");
+    sb.append("    header: ").append(toIndentedString(header)).append("\n");
+    sb.append("    manifest: ").append(toIndentedString(manifest)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
