# core/src/main/java/com/radixdlt/api/core/generated/models/TransactionReceipt.java
@@ -1,0 +1,143 @@
+/*
+ * Babylon Core API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.radixdlt.api.core.generated.models;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.HashMap;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import com.fasterxml.jackson.annotation.JsonValue;
+import com.radixdlt.api.core.generated.models.FeeSummary;
+import com.radixdlt.api.core.generated.models.TransactionStatus;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+
+
+/**
+ * TransactionReceipt
+ */
+@JsonPropertyOrder({
+  TransactionReceipt.JSON_PROPERTY_STATUS,
+  TransactionReceipt.JSON_PROPERTY_FEE_SUMMARY
+})
+@javax.annotation.processing.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
+public class TransactionReceipt {
+  public static final String JSON_PROPERTY_STATUS = "status";
+  private TransactionStatus status;
+
+  public static final String JSON_PROPERTY_FEE_SUMMARY = "fee_summary";
+  private FeeSummary feeSummary;
+
+
+  public TransactionReceipt status(TransactionStatus status) {
+    this.status = status;
+    return this;
+  }
+
+   /**
+   * Get status
+   * @return status
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_STATUS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public TransactionStatus getStatus() {
+    return status;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_STATUS)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setStatus(TransactionStatus status) {
+    this.status = status;
+  }
+
+
+  public TransactionReceipt feeSummary(FeeSummary feeSummary) {
+    this.feeSummary = feeSummary;
+    return this;
+  }
+
+   /**
+   * Get feeSummary
+   * @return feeSummary
+  **/
+  @javax.annotation.Nonnull
+  @ApiModelProperty(required = true, value = "")
+  @JsonProperty(JSON_PROPERTY_FEE_SUMMARY)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+
+  public FeeSummary getFeeSummary() {
+    return feeSummary;
+  }
+
+
+  @JsonProperty(JSON_PROPERTY_FEE_SUMMARY)
+  @JsonInclude(value = JsonInclude.Include.ALWAYS)
+  public void setFeeSummary(FeeSummary feeSummary) {
+    this.feeSummary = feeSummary;
+  }
+
+
+  /**
+   * Return true if this TransactionReceipt object is equal to o.
+   */
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    TransactionReceipt transactionReceipt = (TransactionReceipt) o;
+    return Objects.equals(this.status, transactionReceipt.status) &&
+        Objects.equals(this.feeSummary, transactionReceipt.feeSummary);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(status, feeSummary);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class TransactionReceipt {\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("    feeSummary: ").append(toIndentedString(feeSummary)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+}
+
